# Applimate

./: .gitignore  README.md  pyproject.toml
Server/Server/: settings.py  urls.py
Server/app/: models.py  permissions.py  serializers.py  urls.py  views.py
Server/authentication/: models.py  serializers.py  urls.py  utils.py  views.py
